--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Quiz Game</string>
+    <string name="select_question_category">Select Question Category</string>
+    <string name="select_difficult_level">Select Difficult Level</string>
+    <string name="select_question_quantity">Select Question Quantity</string>
 </resources>
